# Quant-AI-System

./: .env.example  .gitignore  PROJECT_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml
backtest-ui/: index.html  package-lock.json  package.json
backtest-ui/src/: App.tsx  index.css
config/: instruments.yaml  settings.yaml
pipeline/: __init__.py
pipeline/api/: __init__.py
pipeline/cleaning/: __init__.py
pipeline/connectors/: __init__.py
pipeline/core/: __init__.py
pipeline/feature_engineering/: __init__.py  stats.py  store.py
pipeline/feature_engineering/indicators/: momentum.py  trend.py  volatility.py  volume.py
pipeline/feature_engineering/storage/: __init__.py  timescale_adapter.py
pipeline/ingestion/: __init__.py
pipeline/storage/: __init__.py
pipeline/streaming/: __init__.py
scratch/: check_features.py  verify_backtester.py
scripts/: backfill.py  calculate_historical_features.py  clear_data.py  reprocess.py  run_pipeline.py  setup_db.py
src/: __init__.py
src/api/: __init__.py  data_quality.py  data_service.py  health.py  latency.py  server.py
src/backtesting/: engine.py  metrics.py  models.py  signal_generator.py  walk_forward.py
src/cleaning/: __init__.py  adjuster.py  advanced_validator.py  cleaner.py  validator.py
src/connectors/: __init__.py  angel_one.py  base.py  binance_futures.py  yfinance_connector.py
src/core/: __init__.py  config.py  enums.py  exceptions.py  logging.py  models.py
src/feature_engineering/: __init__.py  feature_calculations.py  feature_storage.py
src/ingestion/: __init__.py  historical.py  live.py  normalizer.py  scheduler.py
src/storage/: __init__.py  backtest_repository.py  database.py  metadata.py  raw_store.py  repository.py
src/storage/migrations/: 001_initial.sql  002_enhancements.sql  003_features.sql  004_backtest_runs.sql
src/streaming/: __init__.py  publisher.py  subscriber.py
tests/: conftest.py
tests/test_cleaning/: test_validator.py
tests/test_core/: test_models.py
tests/test_ingestion/: test_normalizer.py
tests/test_storage/: test_raw_store.py
